kotlin/programming-kotlin_code/lambdas/output/noreturn.output
noreturn.kts:15:22: error: 'return' is not allowed here
      if (it == 2) { return } //ERROR, return is not allowed here <label id="code.errorreturn" />
                     ^
